--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,16 +18,16 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-    
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt          pip install pyinstaller
+          pip install -r requirements.txt
+          pip install pyinstaller
 
       - name: Build executable
         run: |
