--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,11 +26,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip          pip install -r requirements.txt
-          pip install pyinstaller
-
-      - name: Build executable
+          pip install pyinstaller      - name: Build executable
         run: |
-          pyinstaller --onefile --noconsole --clean --hidden-import win32process --hidden-import win32api --hidden-import win32con --name KeyMind main.py
+          pyinstaller --onefile --noconsole --clean --collect-all customtkinter --hidden-import win32process --hidden-import win32api --hidden-import win32con --name KeyMind main.py
           dir dist
 
       - name: Upload artifact
