--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -25,8 +26,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip          pip install -r requirements.txt
-          pip install pyinstaller      - name: Build executable
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pyinstaller
+
+      - name: Build executable
         run: |
           pyinstaller --onefile --noconsole --clean --collect-all customtkinter --hidden-import win32process --hidden-import win32api --hidden-import win32con --name KeyMind main.py
           dir dist
