--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pyinstaller      - name: Build executable
+          pip install pyinstaller
+
+      - name: Build executable
         run: |
           python -m PyInstaller --onefile --noconsole --clean --collect-all customtkinter --collect-all google.generativeai --collect-all google --hidden-import win32process --hidden-import win32api --hidden-import win32con --name KeyMind main.py
           mkdir dist\user_config
