--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,6 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: dist/KeyMind.exe
-          tag_name: v0.1.${{ github.run_number }}
+          tag_name: v0.1.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
