Update settings.json to add essential system programs to default allowed list

--- a/user_config/settings.json
+++ b/user_config/settings.json
@@ -2,5 +2,26 @@
     "api_key": "",
     "browsers": [],
     "banned": [],
-    "allowed": []
+    "allowed": [
+        "new tab",
+        "keymind",
+        "explorer",
+        "start",
+        "shellhost",
+        "shell",
+        "lockapp",
+        "taskbar",
+        "task manager",
+        "settings",
+        "control panel",
+        "system",
+        "search",
+        "notification",
+        "security center",
+        "windows defender",
+        "windows security",
+        "cmd",
+        "powershell",
+        "terminal"
+    ]
 }
