--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 customtkinter>=5.2.0
-pygetwindow>=0.0.9
 psutil>=5.9.0
 pyautogui>=0.9.54
-pywin32>=306
 google-generativeai>=0.3.0
+
+# Windows-specific
+pygetwindow>=0.0.9; sys_platform == "win32"
+pywin32>=306; sys_platform == "win32"
+
+# macOS-specific
+pyobjc>=10.3; sys_platform == "darwin"
