--- a/.github/workflows/build_macos.yml
+++ b/.github/workflows/build_macos.yml
@@ -52,6 +52,8 @@ jobs:
           ls -la dist
 
       - name: Upload macOS artifacts
+
+      - name: Upload macOS artifacts
         uses: actions/upload-artifact@v4
         with:
           name: KeyMind-macOS
@@ -59,5 +61,11 @@ jobs:
             dist/KeyMind.app
             dist/KeyMind.dmg
           if-no-files-found: error
+
+      - name: Upload to GitHub Release
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: softprops/action-gh-release@v1
+        with:
+          files: dist/KeyMind.dmg
 
 
